--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,14 @@
     display: block;
 }
 .justify-content-center {
-    border-style: outset;
-    color: yellow;
-    
+    border-style: outset;   
+}
+
+h1 {
+    margin: 2%;
+    margin-left: 65%;
+}
+.mission-Statement {
+    margin-left: 45%;
+    margin-bottom: 4%;
 }
