--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,12 @@
 #mobileNav {
     display:none;
 }
-/*-----------------------------*/
 
+/*-----------------------------*/
 body {
     font-size: 22px;
 }
 
-/*----Header Section For resizing---*/
 h1 {
     margin: 2%;
     font-size: 62px;
@@ -36,30 +35,20 @@ h1 {
     left: 50%;
     bottom: 58%;
     position: absolute;
-    /* For Mobile Resize*/
-    display:;
+     /* For Mobile Resize*/
+    
 }
 .mission-Statement {
     margin-left: 45%;
     margin-bottom: 4%;
     font-size: 26px;
     font-family: 'Lato', sans-serif;
-    /* For Mobile Resize*/
-    display:;
-    
 }
+
 .header-Logo{
     width: 181px;
     height: 180px;
     margin: 2%;
-    /* For Mobile Resize*/
-    display:;
-}
-/*--------------------------*/
-
-
-.top-Header{
-    position: relative;
 }
 #form-Box {
     margin-top: 5%;
@@ -67,11 +56,29 @@ h1 {
     padding: 2%;
 }
 
+.top-Header{
+    position: relative;
+}
 
+.top-Header{
+    position: relative;
+}
 
+#form-Box {
+    margin-top: 5%;
+    margin-bottom: 5%;
+    padding: 2%;
+}
 
 .brand-Text{
     font-size: 22px;
+}
+
+#backgroundImage{
+    text-align:center;
+width:100%;
+display:block;
+margin:auto;
 }
 
 .footer-Logo {
@@ -80,18 +87,34 @@ h1 {
     margin-bottom: 5%;
 }
 
+
+.text1{
+    margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
+
+#information{
+    align-content: left;
+    
+}
+
 body {
     background-color: #D9D9D9;
 }
 
-.topImage{
-    
+
+.button1 .button2 .button3 .button4{
+background-color: #FFBC4B;
+min-width: 250px
+
 }
 
 .btn {
-    width: 500px;
+    width: 300px;
+    margin-bottom: 20px;
 }
-
 
 .brand-Text {
     font-size: 22px;
@@ -101,3 +124,22 @@ body {
     background-color: #FFBC4B;
 }
          
+
+
+.brand-Text {
+    font-size: 22px;
+}
+
+img, svg {
+    vertical-align: middle;
+    max-width: 100%;
+}
+
+#form-Box {
+    padding: 10%;
+
+}
+
+.form-Label {
+    font-size: medium ;
+}
